--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,2 @@
 [all]
-44.207.206.217 ansible_user=ubuntu ansible_ssh_private_key_file=/Users/edensitkovetsky/Downloads/mymymymy.pem
+<your-ip-adress> ansible_user=ubuntu ansible_ssh_private_key_file=/Users/<key-path>.pem
